--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "counters-for-test",
+  "name": "forms-for-test",
   "version": "0.1.0",
   "private": false,
-  "description": "Many counters, every fourth counts seconds",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AntonLad/counters"
-  },
+  "description": "Forms",
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "fs": "^0.0.1-security",
+    "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.3",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "watch:server": "nodemon server/server.js",
+    "start": "yarn run watch:server & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
