--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "watch:server": "nodemon server/server.js",
     "start": "yarn run watch:server & react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^28.1.3"
   }
 }
